<resources>
    <string name="app_name">Memory 1.0</string>
    <string name="sound_bool">Sound on/off</string>
    <string name="start_game_4x4">Start 4x4</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="Hardcore">Hardcore</string>
    <string name="logo">logo_placeholder</string>
    <string name="music_bool">Music on/off</string>
    <string name="StartGame">Start Game</string>
    <string name="try_again">Please try again.</string>
    <string name="already_selected_picture">Picture is already selected, please choose another one.</string>
    <string name="next">Next</string>
    <string name="your_time">Your time:</string>
    <string name="close">Close</string>
</resources>
